Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 25.02.2022 08:33:55</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 25.02.2022 09:13:19</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -154,7 +154,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z cerstveho jihoceskeho kapra s citronem a francouzskym horcicnym maslem, bramborovy salat s bilou redkvi, cibulkou, zelenymi bylinkami a majonezou 139</li><li>Smazeny filet z cerstve bile tresky, bramborovy salat s bilou redkvi, cibulkou, zelenymi bylinkami a majonezou, citron {L} 169</li><li>Jamajske pikantni jerk stew s veprovym masem, bataty, paprikami, rajcaty a chilli, jasminova ryze 139</li><li>Grilovane jehneci kofte, okurkove tzatziki, zeleninovy pilaf z kulate ryze, salatek 165</li><li>Indicky dal z cervene cocky s rajcaty, panc phoron a sazenym vejcem, chlebove placky, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s hummusem se susenymi rajcaty, korenena ryze s beluga cockou, salatek 139</li><li>Peceny cerstvy morsky vlk s hummusem se susenymi rajcaty, korenena ryze s beluga cockou, salatek 169</li><li>Libanonske kruti nudlicky v arabskem chlebu s rajcaty, pekingskym zelim a jogurtovou omackou, zeleninovy bulgur {L} 139</li><li>Smazene rizecky z panenske svickove, bramborovy salat s cervenou repou, bylinkami, redkvi a majonezou, citron {L} 169</li><li>Zapecene cukety plnene ryzi s rajcaty, bylinkami a balkanskym syrem,  salatek 139</li></ol>
 </td>
 </tr>
 </table>
