--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.02.2022 09:39:41</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 28.02.2022 10:11:28</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -179,7 +179,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z cerstveho jihoceskeho amura se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou, klicky a zelenymi bylinkami 139</li><li>Gravlax z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou, klicky a zelenymi bylinkami 169</li><li>Pad kra pao – thajske veprove se zelenymi fazolkami, bazalkou, chilli a sazenym vajickem, jasminova ryze, salatek 139</li><li>Grilovane medailonky z hoveziho flank steaku s peprovou omackou, gratinovane brambory, salatek 175</li><li>Pecene papriky a zampiony zapecene s ementalem a bylinkami, zeleninovy bulgur, cizrnovy hummus {L} 139</li></ol>
+<ol><li>Peceny filet z cerstveho jihoceskeho amura se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou, klicky a zelenymi bylinkami 139</li><li>Gravlax z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou, klicky a zelenymi bylinkami 169</li><li>Pad kra pao – thajske veprove se zelenymi fazolkami, bazalkou, chilli a sazenym vajickem, jasminova ryze, salatek 139</li><li>Grilovane medailonky z hoveziho flank steaku s peprovou omackou, gratinovane brambory, salatek  ( L) 175</li><li>Pecene papriky a zampiony zapecene s ementalem a bylinkami, zeleninovy bulgur, cizrnovy hummus {L} 139</li></ol>
 </td>
 </tr>
 </table>
