--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.03.2022 08:10:20</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.03.2022 08:33:57</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -57,6 +57,21 @@
 <div class="cena">59 Kč</div>
 <div class="clear"></div>
 </li>
+<li class="poznamka">
+<div class="polozka">Malinový Míša dort</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Věneček s čokoládovým a karamelovým krémem</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ořechový dort bez lepku a laktózy</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Krém z červeného zelí se slaninou v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">35 Kč</div>
@@ -73,12 +88,12 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Steak z vepřové krkovice, bramborovo-dýňové pyré, polníček, slunečnicová semínka</div>
+<div class="polozka"><span class="poradi">2. </span>150g Steak z vepřové krkovice, bramborovo-dýňové pyré, polníček,, slunečnicová semínka <em title="Sójové boby (sója)">6</em><em title="Mléko">7</em></div>
 <div class="cena">149 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Ragú z hlívy ústřičné, zapečená polenta, sušená rajčata, rukola <em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">3. </span>Ragú z hlívy ústřičné, zapečená polenta, sušená rajčata, rukola <em title="Mléko">7</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
