--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.03.2022 08:33:57</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.03.2022 09:13:52</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,21 @@
 <h5>Úterý, 01. 03. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Mexická fazolová</strong>
+<strong>Kmínová s vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Domácí sekaná s celerem s vařeným bramborem a hořčicí</strong>
+<strong>Uzený jazýček s křenovou omáčkou a houskovým knedlíkem NEBO vařeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny se smetanovou omáčkou, kuřecím masem a parmazánem</strong>
+<strong>Fish and Chips s tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -177,7 +177,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z cerstveho jihoceskeho amura se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou, klicky a zelenymi bylinkami 139</li><li>Gravlax z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle se zeleninou, klicky a zelenymi bylinkami 169</li><li>Pad kra pao – thajske veprove se zelenymi fazolkami, bazalkou, chilli a sazenym vajickem, jasminova ryze, salatek 139</li><li>Grilovane medailonky z hoveziho flank steaku s peprovou omackou, gratinovane brambory, salatek  ( L) 175</li><li>Pecene papriky a zampiony zapecene s ementalem a bylinkami, zeleninovy bulgur, cizrnovy hummus {L} 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s tureckymi olivami a rukolovym pestem, cizrnovy salat se zeleninou a beluga cockou 139</li><li>Peceny filet z cerstveho kanice a tresky s tureckymi olivami a rukolovym pestem, cizrnovy salat se zeleninou a beluga cockou 169</li><li>Thajske massaman kari s hovezim masem, pecenymi bataty a kokosovym mlekem, jasminova ryze 139</li><li>Grilovana koroptvi prsicka s merunkovym catny, pecene brambory s pecenou podzimni zeleninou, salatek 169</li><li>Wrap s pecenou dyni, avokadem a hummusem, jahly se smazenou cibulkou, salatek {L – veganske}139</li></ol>
 </td>
 </tr>
 </table>
