--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.03.2022 08:34:06</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.03.2022 09:13:37</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Středa, 02. 03. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Kmínová s vejcem</strong>
+<strong>Cizrnová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Uzený jazýček s křenovou omáčkou a houskovým knedlíkem NEBO vařeným bramborem</strong>
+<strong>Vepřo knedlo zelo</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Fish and Chips s tatarkou</strong>
+<strong>Míchaný salát se šunkou, sýrem a vejcem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							127,-
 						</span>
 </p>
 <p>
@@ -157,7 +157,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s tureckymi olivami a rukolovym pestem, cizrnovy salat se zeleninou a beluga cockou 139</li><li>Peceny filet z cerstveho kanice a tresky s tureckymi olivami a rukolovym pestem, cizrnovy salat se zeleninou a beluga cockou 169</li><li>Thajske massaman kari s hovezim masem, pecenymi bataty a kokosovym mlekem, jasminova ryze 139</li><li>Grilovana koroptvi prsicka s merunkovym catny, pecene brambory s pecenou podzimni zeleninou, salatek 169</li><li>Wrap s pecenou dyni, avokadem a hummusem, jahly se smazenou cibulkou, salatek {L – veganske}139</li></ol>
+<ol><li>Grilovane medailonky z rybich filetu {treska, makrela, uzeny losos} s jogurtovou citronovo-koprovou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem {L} 139 </li><li>Peceny filet z cerstveho norskeho lososa s jogurtovou citronovo-koprovou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem 169</li><li>Opekane jihocinske veprove ve sladkokysele omacce s ananasem, paprikami, sezamem a zazvorem, jasminova ryze, salatek 139</li><li>Italske rizoto na bilem vine s gorgonzolou, pak coj a kousky pecene husy, salatek 169</li><li>Indicke badzi {cibulovo-cizrnove smazenky} se zampiony a syrem halloumi, pikantni rajcatova salsa, cizrnovy salat se zeleninou 139</li></ol>
 </td>
 </tr>
 </table>
