Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.03.2022 08:34:19</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.03.2022 09:12:57</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Čtvrtek, 03. 03. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Cizrnová</strong>
+<strong>Brokolicová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřo knedlo zelo</strong>
+<strong>Těstoviny s tomatovo-bazalkovou omáčkou, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát se šunkou, sýrem a vejcem</strong>
+<strong>Smažený květák s vařeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							135,-
 						</span>
 </p>
 <p>
@@ -164,7 +164,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Grilovane biftecky z rybich filetu {treska, makrela, uzeny losos} s jogurtovou citronovo-koprovou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem {L} 139 </li><li>Peceny filet z cerstveho norskeho lososa s jogurtovou citronovo-koprovou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem 169</li><li>Opekane jihocinske veprove ve sladkokysele omacce s ananasem, paprikami, sezamem a zazvorem, jasminova ryze, salatek 139</li><li>Italske rizoto na bilem vine s gorgonzolou, pak coj a kousky pecene husy, salatek 169</li><li>Indicke badzi {cibulovo-cizrnove smazenky} se zampiony a syrem halloumi, pikantni rajcatova salsa, cizrnovy salat se zeleninou 139</li></ol>
+<ol><li>Peceny filet z cerstveho jihoceskeho kapra s rajcatovou salsou, pohanka s pecenou zeleninou, salatek 139</li><li>Peceny filet z cerstve tmave tresky a lososoviteho pstruha s rajcatovou salsou, pohanka s pecenou zeleninou, salatek 169</li><li>Grilovane hovezi kofte v arabskem chlebu se zeleninou {pekingske zeli, rajcata, cervena cibulka} a okurkovymi tzatziki, ryze s cockou {L} 139</li><li>Izraelske sofrito z farmarskeho kurete s citrony, bramborami a kurkumou, salatek 165</li><li>Baba ganus – lilkovy dip s tahini, sazene vejce, arabsky chleb, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
