Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.03.2022 08:34:14</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.03.2022 09:13:12</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pátek, 04. 03. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Brokolicová</strong>
+<strong>Papriková s bramborem a klobáskou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny s tomatovo-bazalkovou omáčkou, kuřecím masem a parmazánem</strong>
+<strong>Kuřecí stehno na divoko s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Smažený květák s vařeným bramborem a tatarkou</strong>
+<strong>Buchtičky s vanilkovým krémem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							115,-
 						</span>
 </p>
 <p>
@@ -154,7 +154,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z cerstveho jihoceskeho kapra s rajcatovou salsou, pohanka s pecenou zeleninou, salatek 139</li><li>Peceny filet z cerstve tmave tresky a lososoviteho pstruha s rajcatovou salsou, pohanka s pecenou zeleninou, salatek 169</li><li>Grilovane hovezi kofte v arabskem chlebu se zeleninou {pekingske zeli, rajcata, cervena cibulka} a okurkovymi tzatziki, ryze s cockou {L} 139</li><li>Izraelske sofrito z farmarskeho kurete s citrony, bramborami a kurkumou, salatek 165</li><li>Baba ganus – lilkovy dip s tahini, sazene vejce, arabsky chleb, salatek {L} 139</li></ol>
+<ol><li>Thajske kari s kousky rybich filetu {makrela, sled, losos}, kokosovym mlekem, pak coj, a zeleninou, jasminova ryze 139</li><li>Smazeny filet z cerstve bile tresky, pecene brambory, tatarska omacka,  hraskove pyre {L} 169 </li><li>Burrito s trhanym barbecue hovezim s paprikami, fazolemi a zralou goudou, zeleninova ryze, salatek {L} 139</li><li>Grilovane medailonky z krutich prsou s dzemem z cervene cibule, pecene brambory, salatek 169</li><li>Bramborove gnocchi s ratatouille z pecene zeleniny a grilovanym syrem halloumi {L} 139</li></ol>
 </td>
 </tr>
 </table>
